<resources>
    <string name="content_desc">Image view</string>
    <string name="no_internet_connection">Please ensure that you are in an area with strong WiFI/3G Signal</string>
    <string name="connecting_msg">Connecting…</string>
    <string name="processing_msg">Processing…</string>
    <string name="activity_choose_language_english">English</string>
    <string name="activity_choose_language_sp">简体字</string>
    <string name="activity_choose_language_zh">繁體字</string>
    <string name="nothing_here">Nothing here</string>
    <string name="block_user">Block User</string>
    <string name="blocked">Blocked</string>
    <string name="unblock">unblock successfully</string>
    <string name="unfollow_confirmation">Are you sure, you want to stop following </string>
    <string name="skip">skip</string>
    <string name="follow">Follow</string>
    <string name="suggested">Suggested</string>
    <string name="maintenance_message">WE ARE UNDER MAINTENANCE</string>
    <string name="font_futuracondensedmedium" translatable="false">futuracondensedmedium.ttf</string>
    <string name="font_HelveticaNeueRegular" translatable="false">helveticaregular.ttf</string>
    <string name="font_helveticaneuebold" translatable="false">helveticabold.otf</string>
    <string name="font_helveticaneuelight" translatable="false">helveticalight.otf</string>
    <string name="futuramedium" translatable="false">futuramedium.ttf</string>
    <string name="font_opensansbold" translatable="false">opensansbold.ttf</string>
    <string name="font_opensansregular" translatable="false">opensansregular.ttf</string>
    <string name="font_opensansemibold" translatable="false">opensanssemibold.ttf</string>
    <string name="font_opensanssemibold" translatable="false">opensanssemibold.ttf</string>
    <string name="font_opensansextrabold" translatable="false">opensansextrabold.ttf</string>
    <string name="font_opensanslight" translatable="false">opensanslight.ttf</string>
    <string name="font_helvetica" translatable="false">helvetica.otf</string>
    <string name="font_tekobold" translatable="false">teko-bold.ttf</string>
    <string name="font_tekolight" translatable="false">teko-light.ttf</string>
    <string name="font_tekoregular" translatable="false">teko-regular.ttf</string>
    <string name="font_tekomedium" translatable="false">teko-medium.ttf</string>
    <string name="font_tekosemibold" translatable="false">teko-semibold.ttf</string>
    <string name="font_ralewayeregular" translatable="false">ralewayregular.ttf</string>
    <string name="font_ralewaybold" translatable="false">ralewaybold.ttf</string>
    <string name="font_ralewayreg" translatable="false">ralewayreg.ttf</string>
    <string name="font_ralewayextrabold" translatable="false">ralewayextrabold.ttf</string>
    <string name="font_questrialregular" translatable="false">questrialregular.ttf</string>
    <string name="font_montserratmedium" translatable="false">montserratmedium.ttf</string>
    <string name="font_opensansitalicsemibold" translatable="false">opensansitalicsemibold.ttf</string>
    <string name="user_name_or_email">Username or Email</string>
    <string name="password">Password</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="login_Sign_in_later">Sign in later</string>
    <string name="phone_login_sigin_signup">sign in / sign up</string>
    <string name="phone_signin">sign in</string>
    <string name="phone_login_signup">sign up</string>
    <string name="phone_login_message">Please enter your phone number</string>
    <string name="phone_login_message_has_account">This number has been registered.\nSign with your password.</string>
    <string name="phone_signup_message">Please enter the verification code we\'ve\n just sent to %s</string>
    <string name="phone_signup_new_password_messsage">Enter a password for your new account.</string>
    <string name="phone_signup_new_password_messsage_2">Enter a new password</string>
    <string name="phone_signup_new_password_tips">Password should be 6~20 characters.</string>
    <string name="dont_receive_virification_code">Didn\'t receive the code</string>
    <string name="phone_number_hint">Phone number</string>
    <string name="password_hint">Enter password</string>
    <string name="verification_code_hint">Enter verification code</string>
    <string name="next">next</string>
    <string name="resend_in_count_down">resend (%d)</string>
    <string name="resend_fixed_60s">resend (60)</string>
    <string name="resend">resend</string>
    <string name="verify">verify</string>
    <string name="phone_verify_title">Sign up with %s</string>
    <string name="phone_signin_verify_message">This number has not been registered yet. Tap \'Verify\' to send a verification code to this number</string>
    <string name="phone_signin_invalid_code_message">Invalid code. Tap \'Resend\' if you need a new code.</string>
    <string name="phone_signin_incorrect_password">Incorrect password entered.</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="reset_password">reset password</string>
    <string name="reset_password_message">Reset your password by entering\nthe verification sent to this number.</string>
    <string name="user_name">Username</string>
    <string name="activity_sign_unknown_error">An unknown error. Please try again !</string>
    <string name="camera">Camera</string>
    <string name="btn_text_cancel">Cancel</string>
    <string name="btn_text_ok">OK</string>
    <string name="btn_text_done">Done</string>
    <string name="btn_text_wait">Wait</string>
    <string name="btn_text_close_stream">Close Stream</string>
    <string name="choose_from_library">Library</string>
    <string name="toast_cannot_retrieve_cropped_image">Cannot retrieve cropped image</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_pro_dbo">Date of Birth</string>
    <string name="edit_pro_avatar">Avatar</string>
    <string name="edit_pro_display_name">Display Name</string>
    <string name="edit_pro_id_name">ID Name</string>
    <string name="edit_pro_gender">Gender</string>
    <string name="edit_pro_gender_male">Male</string>
    <string name="edit_pro_gender_female">Female</string>
    <string name="edit_pro_biography">Biography</string>
    <string name="edit_pro_birthday">Birthday</string>
    <string name="edit_pro_save">Save</string>
    <string name="edit_pro_display_name_validation">Display name minimum 3 characters required and maximum 16 characters long</string>
    <string name="edit_pro_error_unselected_gender">Please select your gender</string>
    <string name="edit_pro_quote_hind">Update your status</string>
    <string name="search_new_user">Search</string>
    <string name="km_default"> -- Km</string>
    <string name="search_title">Search username</string>
    <string name="daily_treat_message">Nice! you\'ve got…</string>
    <string name="daily_treat_message_ultimate">WOW! You\'re a winner!</string>
    <string name="open_it">open it</string>
    <string name="daily_treat_result_message">You opened the box and found…</string>
    <string name="daily_treat_result_message_already_claimed">You\'ve already claimed a treat today!</string>
    <string name="claim">claim</string>
    <string name="claim_later">later</string>
    <string name="daily_treat_reopen_in">Come back in %s for a new treat</string>
    <string name="daily_treat_share_message">Tell your friends all about it!</string>
    <string name="daily_treat_share_content">I have won %1$,d %2$s! Come join in the fun with me on BeLive!</string>
    <string name="facebok_friends">Facebook Friends</string>
    <string name="profile_header">PROFILE</string>
    <string name="followers">followers</string>
    <string name="following">following</string>
    <string name="stars">stars</string>
    <string name="profile_follow">Following</string>
    <string name="profile_un_follow">@string/follow</string>
    <string name="pop_up_option">Select Option</string>
    <string name="pop_up_follow_user">Follow User</string>
    <string name="pop_up_unfollow_user">Unfollow User</string>
    <string name="follow_us">Follow us</string>
    <string name="btn_text_yes">Yes</string>
    <string name="btn_text_no">No</string>
    <string name="are_you_sure_to_proceed">Are you sure you want to proceed?</string>
    <string name="do_you_want_to_delete_this_post">Do you want to delete this post?</string>
    <string name="do_you_want_to_delete_this_stream">Do you want to delete this recorded stream?</string>
    <string name="profile_post_not_of_me">This post is not belong to you</string>
    <string name="newsfeed_menu_del_post">Delete post</string>
    <string name="newsfeed_menu_edit_post">Edit post</string>
    <string name="newsfeed_menu_folow">@string/follow</string>
    <string name="newsfeed_menu_unfolow">Unfollow</string>
    <string name="newsfeed_menu_repost">Report</string>
    <string name="newsfeed_menu_unrepost">UnReport</string>
    <string name="newsfeed_like_count_text">likes</string>
    <string name="newsfeed_like_count_is_one">like</string>
    <string name="newsfeed_btn_live">LIVE</string>
    <string name="messages">Messages</string>
    <string name="transactions_slider">Pocket</string>
    <string name="setting_slider">Settings</string>
    <string name="personal_leaderboard_slider">Leaderboard</string>
    <string name="daily_treats">Daily Treats</string>
    <string name="invite_a_friend_slider">Invite a Friend</string>
    <string name="logout_slider">Log Out</string>
    <string name="login_slider">LogIn</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="refill_menu">Refill </string>
    <string name="points_menu">Points </string>
    <string name="profile_menu">Profile </string>
    <string name="pocket_Current_Balance">Current Balance</string>
    <string name="pocket_Beans">Beans</string>
    <string name="pocket_Date">Date</string>
    <string name="pocket_Remark">Remark</string>
    <string name="pocket_Total">Total</string>
    <string name="pocket_In">In/Out</string>
    <string name="pocket_DescripBteioan">Description/Date</string>
    <string name="pocket_Current">Current</string>
    <string name="pocket_to">to</string>
    <string name="play_token_register">Register</string>
    <string name="login_playtoken_please_input_your_username_">Please input your username</string>
    <string name="login_playtoken_please_input_your_password">Please input your Password</string>
    <string name="income_menu">Income</string>
    <string name="income_what_are_stars">What are Stars ?</string>
    <string name="income_start_to_cash">Convert to gems</string>
    <string name="income_start_to_gem">Exchange Rewards</string>
    <string name="income_start_are_ear">Stars are earned when your fans send gifts to you. The more you have, means the more popular you are! These Stars can be converted to Gems or be withdrawn as rewards.</string>
    <string name="income_what_are_gems">What are Gems ?</string>
    <string name="income_gems_enable">Gems enables you to buy gifts for your favourite broadcasters, allowing them to give you more attention as they acknowledge you as their top fans (To send gifts, you can go to their Profile page or their livestreams).</string>
    <string name="income_start_received">Stars available</string>
    <string name="submit">Submit</string>
    <string name="transaction_hitory">History</string>
    <string name="redemption_userId_title">Belive ID</string>
    <string name="redemption_your_name_title">Your Name</string>
    <string name="redemption_email_title">Email</string>
    <string name="redemption_confirm_text">I confirm that all the information given in this form is correct, and will not hold Belive responsible for the loss of mail due to any mistake I have left in this form.</string>
</resources>