<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_daily_treats"
            android:icon="@drawable/icon_sliding_daily_treats"
            android:title="@string/daily_treats"
            android:visible="false" />

        <item
            android:id="@+id/nav_leader_board"
            android:icon="@drawable/icon_sliding_leaderboard"
            android:title="@string/personal_leaderboard_slider"
            android:visible="false" />

        <item
            android:id="@+id/nav_invite_friend"
            android:icon="@drawable/icon_sliding_invitefriend"
            android:title="@string/invite_a_friend_slider" />

        <item

            android:id="@+id/nav_Points"
            android:icon="@drawable/icon_sliding_points"
            android:title="@string/points_menu" />

        <item
            android:id="@+id/nav_Refill"
            android:icon="@drawable/icon_sliding_refill"
            android:title="@string/refill_menu" />

        <item
            android:id="@+id/nav_income"
            android:icon="@drawable/icon_sliding_income"
            android:title="@string/income_menu" />

        <item

            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_sliding_profile"
            android:title="@string/profile_menu" />

        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/icon_sliding_setting"
            android:title="@string/setting_slider" />
        <item
            android:id="@+id/nav_transaction"
            android:icon="@drawable/slide_transaction"
            android:title="@string/transactions_slider"
            android:visible="false" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/icon_sliding_logout"
            android:title="@string/logout_slider" />

    </group>

</menu>