<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/ll_root"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/bg_post_screen"
              android:orientation="vertical">

    <FrameLayout
        android:id="@+id/flToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/themedToolbarHeight"
        android:background="?attr/themedToolbarDrawable"
        android:paddingTop="?attr/themedToolbarPaddingTop"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imvBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="start|center_vertical"
            android:contentDescription="@string/content_desc"
            android:padding="8dp"
            android:scaleType="centerCrop"
            android:src="?attr/themedToolbarBackIconDrawable"/>

        <com.appster.customview.CustomFontTextView
            android:id="@+id/pageTitle"
            style="?attr/themedToolbarTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/income_menu"
            app:appFont="@string/font_opensansextrabold"/>

        <com.appster.customview.CustomFontButton
            android:id="@+id/btnTransactionHistory"
            style="?attr/themedTransactionHistoryTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:letterSpacing="0.07"
            android:text="@string/transaction_hitory"
            android:textSize="13sp"
            app:appFont="@string/font_HelveticaNeueRegular"/>

    </FrameLayout>

    <ScrollView
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:animateLayoutChanges="true"
                android:background="@drawable/income_gradient_background"
                android:orientation="vertical"
                android:paddingBottom="20dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="42dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="31dp"
                        android:layout_height="31dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginTop="2dp"
                        android:background="@drawable/icon_gift_currency"
                        />

                    <com.appster.customview.CustomFontTextView
                        android:id="@+id/currentGold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:includeFontPadding="false"
                        tools:text="1043"
                        android:textColor="#333333"
                        android:textSize="42sp"
                        app:appFont="@string/font_helveticaneuelight"/>
                </LinearLayout>

                <com.appster.customview.CustomFontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/income_start_received"
                    android:textColor="#9c9c9c"
                    android:textSize="13sp"
                    app:appFont="@string/font_helveticaneuebold"/>

                <LinearLayout
                    android:id="@+id/llShowSGD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="13dp"
                    android:layout_marginTop="3dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/txtSgd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="≈ $39"
                        android:textColor="#A1773A"
                        android:textSize="17sp"/>

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginLeft="6dp"
                        android:background="@drawable/income_qnmk_exchgrate"/>

                </LinearLayout>

                <com.appster.customview.CustomFontButton
                    android:id="@+id/btnStartGems"
                    android:layout_width="220dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/income_exchange_btn"
                    android:letterSpacing="0.09"
                    android:stateListAnimator="@null"
                    android:text="@string/income_start_to_cash"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:appFont="@string/font_opensansbold"/>

                <com.appster.customview.CustomFontButton
                    android:id="@+id/btnStartCash"
                    android:layout_width="220dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/income_stars_to_gem_btn"
                    android:letterSpacing="0.09"
                    android:stateListAnimator="@null"
                    android:text="@string/income_start_to_gem"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:visibility="gone"
                    app:appFont="@string/font_opensansbold"
                    tools:visibility="visible"/>

            </LinearLayout>

            <com.appster.customview.CustomFontTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/white"
                android:gravity="center|left"
                android:paddingLeft="20dp"
                android:paddingTop="15dp"
                android:text="@string/income_what_are_stars"
                android:textColor="#58585b"
                android:textSize="16sp"
                app:appFont="@string/font_opensanssemibold"/>

            <com.appster.customview.CustomFontTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                android:text="@string/income_start_are_ear"
                android:textColor="#9b9b9b"
                android:textSize="13sp"
                app:appFont="@string/font_opensansregular"/>

            <com.appster.customview.CustomFontTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center|left"
                android:paddingLeft="20dp"
                android:paddingTop="15dp"
                android:text="@string/income_what_are_gems"
                android:textColor="#58585b"
                android:textSize="16sp"
                app:appFont="@string/font_opensanssemibold"/>

            <com.appster.customview.CustomFontTextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                android:text="@string/income_gems_enable"
                android:textColor="#9b9b9b"
                android:textSize="13sp"
                app:appFont="@string/font_opensansregular"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
